--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,6 +17,7 @@ sup {
 }
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5 {
+	display: block;
 	margin-bottom: 0.4em;
 	font-family: $font-head;
 	text-transform: uppercase;
