--- a/sass/main.scss
+++ b/sass/main.scss
@@ -18,6 +18,7 @@
 @import 'modules/buttons';
 @import 'modules/modals';
 @import 'modules/slider-ui';
+@import 'modules/video-play';
 @import 'modules/waves';
 @import 'modules/page-title';
 @import 'modules/top-panel';
@@ -32,5 +33,7 @@
 @import 'modules/video-slider';
 @import 'modules/contacts';
 @import 'modules/about-us';
+@import 'modules/our-clients';
+@import 'modules/consist';
 
 @import 'pages/home';
