--- a/sass/modules/_forms.scss
+++ b/sass/modules/_forms.scss
@@ -19,9 +19,11 @@ label{cursor: pointer;}
 	}
 	@include res(l) {
 		padding: 12px 20px;
+		margin-bottom: 20px;
 	}
 	@include res(xs) {
 		padding: 10px 18px;
+		margin-bottom: 12px;
 	}
 
 	@include placeholder {
@@ -84,6 +86,7 @@ label{cursor: pointer;}
 	position: relative;
 	input {
 		display: block;
+		margin-bottom: 10px;
 	}
 	button {
 		position: absolute;
