--- a/sass/modules/_modals.scss
+++ b/sass/modules/_modals.scss
@@ -1,9 +1,37 @@
 .modal{
 	display: none;
-	width: 500px;
+	width: 600px;
 	max-width: 100%;
 	will-change: transform,opacity;
 	overflow: visible !important;
+	color: #fff;
+	background: #2a2c3d;
+	@include res(xl) {
+		width: 500px;
+	}
+	@include res(xs) {
+		padding-left: 12px;
+		padding-right: 12px;
+	}
+	.h3 {
+		text-align: center;
+		@include res(s) {
+			padding-right: 20px;
+			padding-left: 20px;
+		}
+	}
+}
+
+.modal-descr {
+	padding-bottom: $pad-xs;
+	font-size: 16px;
+	text-align: center;
+	@include res(l) {
+		font-size: 14px;
+	}
+	@include res(xs) {
+		padding-bottom: $pad-xxs;
+	}
 }
 
 .fancybox-slide--current {
