--- a/sass/modules/_our-offers.scss
+++ b/sass/modules/_our-offers.scss
@@ -181,7 +181,9 @@
 	&:last-child {
 		padding-right: 0;
 	}
-	span {}
+	span {
+		margin-bottom: 0;
+	}
 	p {
 		font-size: 14px;
 		line-height: 1.2;
