--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -25,7 +25,9 @@ $pad-xs: 20px;
 $pad-xxs: 10px;
 
 $light-blue: #72e1f4;
-$dark-blue: #25cadc;
+$blue: #25cadc;
+$dark-blue: #05416b;
 $link-color: #7bd3e6;
 $text-color: #2a2c3d;
 $pink: #f3afd0;
+$gray: #f6f7fb;
