--- a/sass/main.scss
+++ b/sass/main.scss
@@ -35,5 +35,8 @@
 @import 'modules/about-us';
 @import 'modules/our-clients';
 @import 'modules/consist';
+@import 'modules/rooms-benefits';
+@import 'modules/rooms-slider';
+@import 'modules/form-bottom';
 
 @import 'pages/home';
